# backtester

./: README.md  app.py  data_loader.py  engine.py  metrics.py  moving_average.py  plotting.py  pyproject.toml  strategy_base.py
data/: AAPL.csv
stubs/numpy/: __config__.pyi  __init__.pyi  _array_api_info.pyi  _configtool.pyi  _expired_attrs_2_0.pyi  _globals.pyi  _pytesttester.pyi  ctypeslib.pyi  dtypes.pyi  exceptions.pyi  matlib.pyi
stubs/numpy/_core/: __init__.pyi  _add_newdocs.pyi  _add_newdocs_scalars.pyi  _asarray.pyi  _internal.pyi  _methods.pyi  _multiarray_umath.pyi  _simd.pyi  _type_aliases.pyi  _ufunc_config.pyi  arrayprint.pyi  defchararray.pyi  einsumfunc.pyi  fromnumeric.pyi  function_base.pyi  getlimits.pyi  memmap.pyi  multiarray.pyi  numeric.pyi  numerictypes.pyi  overrides.pyi  printoptions.pyi  records.pyi  shape_base.pyi  strings.pyi  umath.pyi
stubs/numpy/_typing/: _array_like.pyi  _dtype_like.pyi  _nbit_base.pyi  _nested_sequence.pyi  _ufunc.pyi
stubs/numpy/char/: __init__.pyi
stubs/numpy/compat/: __init__.pyi
stubs/numpy/core/: __init__.pyi  _dtype_ctypes.pyi  _multiarray_umath.pyi  arrayprint.pyi  defchararray.pyi  einsumfunc.pyi  fromnumeric.pyi  function_base.pyi  getlimits.pyi  multiarray.pyi  numeric.pyi  numerictypes.pyi  records.pyi  shape_base.pyi  umath.pyi
stubs/numpy/distutils/: __init__.pyi  intelccompiler.pyi
stubs/pandas/: __init__.pyi  _typing.pyi  _version.pyi  _version_meson.pyi
stubs/yfinance/: __init__.pyi  base.pyi  cache.pyi  data.pyi  multi.pyi  search.pyi  ticker.pyi  tickers.pyi  utils.pyi
(+332 files in other folders)
