[project]
name = "backtester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
[tool.mypy]
mypy_path = "stubs"
